--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,6 @@
     "name": "Mouse Gesture",
     "version": "1.0.0",
     "description": "Use mouse gestures to navigate your browser",
-    "permissions": [
-        "tabs",
-        "scripting",
-        "activeTab"
-    ],
     "host_permissions": [
         "<all_urls>"
     ],
@@ -25,7 +20,10 @@
         }
     ],
     "icons": {
-        "128": "icons/icon-128.png"
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
     },
     "action": {
         "default_icon": {
